# SAP

./: .huggingface.yaml  LICENSE  README.md  SAP_pipeline_flux.py  app.py  index.html  pyproject.toml  requirements.txt  run_SAP_flux.py
benchmarks/: gpt_eval.py
benchmarks/SAP_prompts/: ContraBench_prompt_mapping.json  Whoops_Hard_prompt_mapping.json  Whoops_prompt_mapping.json
benchmarks/evaluated_seeds/: ContraBench_prompts_seed_map.json  Whoops_Hard_prompt_seed_map.json  Whoops_prompts_seed_map.json
benchmarks/original_prompts/: ContraBench.txt  Whoops.txt  Whoops_Hard.txt
llm_interface/: llm_SAP.py
llm_interface/template/: template_SAP_system.txt  template_SAP_system_short.txt  template_SAP_user.txt
