[project]
name = "sap-paper-code"
version = "0.1.0"
description = "Code for the SAP paper"
dependencies = [
    "accelerate>=0.17.0",
    "diffusers",
    "numpy>=2.0.2",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
requires-python = ">=3.9"

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
